--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,9 +27,14 @@
                             <label for="floatingPassword">Password</label>
                             <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
                         </div>
-                            <input type="submit" value="Iniciar Sesion">
-
+                            <input class="btn btn-primary btn-xl text-uppercase" type="submit" value="Iniciar Sesion">
                         </form>
+                        <div>
+                            <h3>    </h3>
+                            <h3 class="login-heading mb-4">Create una cuenta!</h3>
+                            <a class="btn btn-primary btn-xl text-uppercase" href="registrar">Registrarme</a>
+                        </div>
+
                     </div>
                     </div>
                 </div>
