Arreglada seguridad en el login pero en cada formulario debemos poner el hidden

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,6 +27,7 @@
                             <label for="floatingPassword">Password</label>
                             <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
                         </div>
+                            <input type="hidden" name="_csrf" value="{{token}}"/>
                             <input class="btn btn-primary btn-xl text-uppercase" type="submit" value="Iniciar Sesion">
                         </form>
                         <div>
