--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>Error</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="/css/styles-error.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>¡ERROR!</h1>
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="#!">Ticket Event</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    </div>
+</nav>
+<!-- Page Content-->
+<section>
+    <div class="container  margin-top: 70%">
+        <div class="row gx-10 gx-lg-10">
+            <div class="col-lg-15">
+                <h1 class="mt-5 error-message">¡ERROR!</h1>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
