--- a/src/main/resources/templates/permisosUsuarios.html
+++ b/src/main/resources/templates/permisosUsuarios.html
@@ -30,34 +30,51 @@
 <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-2 fixed-start ms-2   bg-gradient-dark" id="sidenav-main">
   <div class="sidenav-header">
     <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-    <a class="navbar-brand m-0" href="index.html" target="_blank">
-      <span class="ms-1 font-weight-bold text-white" >TicketEvent Administracion</span>
+    <a class="navbar-brand m-0" href="/" target="_blank">
+      <span class="ms-1 font-weight-bold text-white" >Volver a TicketEvent</span>
     </a>
   </div>
   <hr class="horizontal light mt-0 mb-2">
   <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
     <ul class="navbar-nav">
+      {{#admin}}
       <li class="nav-item">
-        <a class="nav-link text-white " href="dashboard">
+        <a class="nav-link text-white" href="dashboard">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">table_view</i>
           </div>
           <span class="nav-link-text ms-1">Panel de Administracion</span>
         </a>
       </li>
+      {{/admin}}
+      {{#admin}}
       <li class="nav-item">
-        <a class="nav-link text-white " href="eventos">
+        <a class="nav-link text-white" href="permisosUsuarios">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">Permisos Edicion</span>
+        </a>
+      </li>
+      {{/admin}}
+      {{#admin}}
+      <li class="nav-item mt-3">
+        <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Gestion de cuentas</h6>
+      </li>
+      {{/admin}}
+
+      {{#user.editor}}
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/eventos">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">table_view</i>
           </div>
           <span class="nav-link-text ms-1">Gestión de Eventos</span>
         </a>
       </li>
-      <li class="nav-item mt-3">
-        <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Gestion de cuentas</h6>
-      </li>
+      {{/user.editor}}
       <li class="nav-item">
-        <a class="nav-link text-white " href="profile">
+        <a class="nav-link text-white" href="profile">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">person</i>
           </div>
