--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -156,8 +156,8 @@
                         <img class="img-fluid" src="https://www.escueladesarts.com/wp-content/uploads/galerias-de-arte.jpg" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Festival Cultural Universitario</div>
-                        <div class="portfolio-caption-subheading text-muted">Cultura</div>
+                        <div class="portfolio-caption-heading">{{event.title}}</div>
+                        <div class="portfolio-caption-subheading text-muted">Ciencias</div>
                     </div>
                 </div>
             </div>
@@ -171,8 +171,8 @@
                         <img class="img-fluid" src="https://st.adasistemas.com/PortalesWeb/Geologos/WebCGeologos/_Private/Imagenes_Menu/231_2018_7_24_21_25_52.jpg" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Taller de Desarrollo Profesional</div>
-                        <div class="portfolio-caption-subheading text-muted">Desarrollo Profesional</div>
+                        <div class="portfolio-caption-heading">{{event.title}}</div>
+                        <div class="portfolio-caption-subheading text-muted">Ciencias</div>
                     </div>
                 </div>
             </div>
@@ -186,8 +186,8 @@
                         <img class="img-fluid" src="https://static4.depositphotos.com/1030387/398/v/450/depositphotos_3984648-stock-illustration-diversity-hands.jpg" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Noche de Gala Benéfica</div>
-                        <div class="portfolio-caption-subheading text-muted">Beneficencia</div>
+                        <div class="portfolio-caption-heading">{{event.title}}</div>
+                        <div class="portfolio-caption-subheading text-muted">Ciencias</div>
                     </div>
                 </div>
             </div>
@@ -201,8 +201,8 @@
                         <img class="img-fluid" src="https://www.magisnet.com/wp-content/uploads/2023/07/Debates-en-clase.jpg" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Torneo Interuniversitario de Debate</div>
-                        <div class="portfolio-caption-subheading text-muted">Debate</div>
+                        <div class="portfolio-caption-heading">{{event.title}}</div>
+                        <div class="portfolio-caption-subheading text-muted">Ciencias</div>
                     </div>
                 </div>
             </div>
@@ -216,8 +216,8 @@
                         <img class="img-fluid" src="https://muzikalia.com/wp-content/uploads/2022/09/DCODE-800x445.jpg" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Concierto de Fin de Semestre</div>
-                        <div class="portfolio-caption-subheading text-muted">Entretenimiento</div>
+                        <div class="portfolio-caption-heading">{{event.title}}</div>
+                        <div class="portfolio-caption-subheading text-muted">Ciencias</div>
                     </div>
                 </div>
             </div>
@@ -338,22 +338,22 @@
                     <div class="col-lg-8">
                         <div class="modal-body">
                             <!-- Project details-->
-                            <h2 class="text-uppercase">Festival Cultural Universitario</h2>
-                            <p class="item-intro text-muted">Cultura</p>
-                            <img class="img-fluid d-block mx-auto" src="https://www.escueladesarts.com/wp-content/uploads/galerias-de-arte.jpg" alt="..." />
-                            <p>Un fin de semana lleno de actividades culturales, incluyendo actuaciones musicales, exposiciones de arte y presentaciones de danza.</p>
+                            <h2 class="text-uppercase">{{event.title}}</h2>
+                            <p class="item-intro text-muted">Ciencias</p>
+                            <img class="img-fluid d-block mx-auto" src="https://www.educaciontrespuntocero.com/wp-content/uploads/2022/10/semana-de-la-ciencia-978x652.jpg" alt="..." />
+                            <p>{{event.description}}</p>
                             <ul class="list-inline">
                                 <li>
                                     <strong>Fecha:</strong>
-                                    5 al 7 de abril de 2024
+                                    {{event.fecha}}
                                 </li>
                                 <li>
                                     <strong>Lugar:</strong>
-                                    Campus Universitario, Universidad Rey Juan Carlos
+                                    {{event.place}}
                                 </li>
                                 <li>
                                     <strong>Duración:</strong>
-                                    3 días
+                                    {{event.duration}}
                                 </li>
                             </ul>
                             <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
