--- a/src/main/resources/templates/editEvent.html
+++ b/src/main/resources/templates/editEvent.html
@@ -1,61 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link href="/css/styles.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <title>Editar evento</title>
+  <link href="/css/stylesInsc.css" rel="stylesheet" />
 </head>
 <body>
-<div class="container-fluid ps-md-0">
-  <div class="row g-0">
-    <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image2"></div>
-    <div class="col-md-8 col-lg-6">
-      <div class="login d-flex align-items-center py-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-9 col-lg-8 mx-auto">
-              <h3 class="login-heading mb-4">Editar evento</h3>
 
-              <!-- Sign In Form -->
-              <form action="/editEvent/{id}" method="post">
-                <div class="form-floating mb-3">
-                  <p>Evento:</p>
-                  <input type="text" class="form-control" name="title" value={{event.title}}/>
+<form action="/editEvent/{id}" method="post">
+  <label for="floatingTitle">Evento:</label>
+  <input type="text" id="floatingTitle" name="title" value={{event.title}} required>
 
-                </div>
-                <div class="form-floating mb-3">
-                  <p>Fecha:</p>
-                  <input type="text" class="form-control" name="fecha" value={{event.fecha}}/>
-                </div>
+  <label for="floatingDate">Fecha</label>
+  <input type="text" class="form-control" id="floatingDate" name="fecha" value={{event.fecha}} required>
 
-                <div class="form-floating mb-3">
-                  <p>Duracion del evento:</p>
-                  <input type="text" class="form-control" name="duration" value={{event.duration}}/>
-                </div>
-                <div class="form-floating mb-3">
-                  <p>Lugar:</p>
-                  <input type="text" class="form-control" name="place" value={{event.place}}/>
+  <label for="floatingDuration">Duracion</label>
+  <input type="text" class="form-control" id="floatingDuration" name="duration" value={{event.duration}} required>
 
-                </div>
+  <label for="floatingPlace">Lugar</label>
+  <input type="text" class="form-control" id="floatingPlace" name="place" value={{event.place}} required>
 
-                <div class="form-floating mb-3">
-                  <p>Descripcion:</p>
-                  <input type ="text" class="form-control" name="description" value={{event.description}}></input>
-                </div>
-                <div class="d-grid">
-                  <button class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit">Añadir foto</button>
-                </div>
-                <div class="d-grid">
-                  <input type="hidden" name="_csrf" value="{{token}}"/>
-                  <input class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit" value="Guardar cambios"/>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+  <input type="hidden" name="_csrf" value="{{token}}"/>
+  <button type="submit">Guardar cambios</button>
+</form>
 </body>
 </html>
