--- a/src/main/resources/templates/createReview.html
+++ b/src/main/resources/templates/createReview.html
@@ -30,10 +30,8 @@
                                 </div>
 
                                 <div class="d-grid">
-                                    <h3 class="login-heading mb-4">    </h3>
-                                    <h3 class="login-heading mb-4">    </h3>
                                     <input type="hidden" name="_csrf" value="{{token}}"/>
-                                    <button class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit">Enviar</button>
+                                    <input class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit" value="Guardar"/>
                                 </div>
 
                             </form>
