conseguido comentarios que se guarden y se muestren solo en el evento

--- a/src/main/resources/templates/showEvent.html
+++ b/src/main/resources/templates/showEvent.html
@@ -110,7 +110,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    {{#allComments}}
+                                    {{#eventComments}}
                                     <tr>
                                         <td>
                                             <div class="d-flex flex-column justify-content-center">
@@ -121,7 +121,7 @@
                                             <h6 class="d-flex flex-column justify-content-center">{{description}}</h6>
                                         </td>
                                     </tr>
-                                    {{/allComments}}
+                                    {{/eventComments}}
                                     </tbody>
                                 </table>
                             </div>
