eliminado comentarios en castellano y arreglo de variables en castellano

--- a/src/main/resources/templates/NewEvent.html
+++ b/src/main/resources/templates/NewEvent.html
@@ -25,7 +25,7 @@
                             </div>
                             <div class="form-floating mb-3">
                                 <p>Fecha:</p>
-                                <input type="text" class="form-control" name="fecha" placeholder="Fecha"/>
+                                <input type="text" class="form-control" name="date" placeholder="date"/>
                             </div>
                             <div class="form-floating mb-3">
                                 <p>Hora del evento:</p>
