--- a/src/main/resources/templates/editEvent.html
+++ b/src/main/resources/templates/editEvent.html
@@ -12,7 +12,7 @@
   <input type="text" id="floatingTitle" name="title" value="{{event.title}}" required>
 
   <label for="floatingDate">Fecha</label>
-  <input type="text" class="form-control" id="floatingDate" name="fecha" value="{{event.fecha}}" required>
+  <input type="text" class="form-control" id="floatingDate" name="date" value="{{event.date}}" required>
 
   <label for="floatingDuration">Duracion</label>
   <input type="text" class="form-control" id="floatingDuration" name="duration" value="{{event.duration}}" required>
