--- a/src/main/resources/templates/eventos.html
+++ b/src/main/resources/templates/eventos.html
@@ -124,7 +124,6 @@
           </div>
         </div>
 
-        <!--tabla-->
         <div class="card-body px-0 pb-2">
           <div class="table-responsive p-0">
             <table class="table align-items-center mb-0">
@@ -154,7 +153,7 @@
                 </td>
                 <td>
                   <div class="d-flex flex-column justify-content-center">
-                    <h6 class="mb-0 text-sm">{{fecha}}</h6>
+                    <h6 class="mb-0 text-sm">{{date}}</h6>
                   </div>
                 </td>
                 <td>
