--- a/src/main/resources/templates/showEvent.html
+++ b/src/main/resources/templates/showEvent.html
@@ -31,12 +31,12 @@
                 <div class="col-md-6">
                     <h1 class="display-5 fw-bolder">{{event.title}}</h1>
                     <div class="fs-5 mb-5">
-                        <span>{{event.categoria}}</span>
+                        <span>{{event.category}}</span>
                     </div>
                     <ul class="list-inline">
                         <li>
                             <strong>Fecha:</strong>
-                            {{event.fecha}}
+                            {{event.date}}
                         </li>
                         <li>
                             <strong>Lugar:</strong>
