Cambio de url en ingles

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -63,7 +63,7 @@
         {{/admin}}
         {{#admin}}
         <li class="nav-item">
-          <a class="nav-link text-white" href="permisosUsuarios">
+          <a class="nav-link text-white" href="userPermissions">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">table_view</i>
             </div>
@@ -79,7 +79,7 @@
 
         {{#user.editor}}
         <li class="nav-item">
-          <a class="nav-link text-white" href="/eventos">
+          <a class="nav-link text-white" href="/events">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">table_view</i>
             </div>
