--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form action="/inscripcion" method="post">
+<form action="/inscription" method="post">
     <div class="form-floating mb-3">
         <p>Nombre:</p>
         <input type="text" class="form-control" name="name" placeholder="Nombre"/>
@@ -28,7 +28,7 @@
 
     <div class="d-grid">
         <input type="hidden" name="_csrf" value="{{token}}"/>
-        <input class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit" value="Registrarse"/>
+        <input class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit" value="Inscribirse"/>
     </div>
 </form>
 
