--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -67,7 +67,7 @@
       {{#admin}}
       {{#user.editor}}
       <li class="nav-item">
-        <a class="nav-link text-white" href="/eventos">
+        <a class="nav-link text-white" href="/events">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">table_view</i>
           </div>
