--- a/src/main/resources/templates/showEvent.html
+++ b/src/main/resources/templates/showEvent.html
@@ -54,7 +54,7 @@
                         </a>
                         {{#user}}
                         <input type="hidden" name="id" value="{{id}}">
-                        <a class="btn btn-primary btn-xl text-uppercase me-2" href="/inscripcion?id={{event.id}}">
+                        <a class="btn btn-primary btn-xl text-uppercase me-2" href="/inscription?id={{event.id}}">
                             <i class="fas fa-edit me-1"></i>
                             Inscribirme
                         </a>
