--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,7 +17,7 @@
                             <h3 class="login-heading mb-4">Bienvenido! Registrate</h3>
 
                             <!-- Sign In Form -->
-                            <form action="/registrar" method="post">
+                            <form action="/register" method="post">
                                 <div class="form-floating mb-3">
                                     <input type="text" class="form-control" id="floatingName" placeholder="Nombre" name="name">
                                     <label for="floatingName">Nombre</label>
